--- a/app/src/main/res/layout/activity_chasabad_poddoti.xml
+++ b/app/src/main/res/layout/activity_chasabad_poddoti.xml
@@ -76,7 +76,6 @@
                         android:orientation="vertical">
 
                         <de.hdodenhof.circleimageview.CircleImageView
-                            xmlns:app="http://schemas.android.com/apk/res-auto"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:src="@mipmap/ic_launcher"
@@ -93,7 +92,7 @@
                             android:text="ধান চাষ পদ্বতি"
                             android:textStyle="bold"
                             android:textSize="20sp"
-                            android:textColor="@color/black"></TextView>
+                            android:textColor="@color/black"/>
 
                     </LinearLayout>
 
@@ -344,7 +343,6 @@
                         android:orientation="vertical">
 
                         <de.hdodenhof.circleimageview.CircleImageView
-                            xmlns:app="http://schemas.android.com/apk/res-auto"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:src="@mipmap/ic_launcher"
@@ -385,7 +383,6 @@
                         android:orientation="vertical">
 
                         <de.hdodenhof.circleimageview.CircleImageView
-                            xmlns:app="http://schemas.android.com/apk/res-auto"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:src="@mipmap/fish"
@@ -434,7 +431,6 @@
                         android:orientation="vertical">
 
                         <de.hdodenhof.circleimageview.CircleImageView
-                            xmlns:app="http://schemas.android.com/apk/res-auto"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:src="@mipmap/ic_launcher"
@@ -475,7 +471,6 @@
                         android:orientation="vertical">
 
                         <de.hdodenhof.circleimageview.CircleImageView
-                            xmlns:app="http://schemas.android.com/apk/res-auto"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:src="@mipmap/fish"
