--- a/app/src/main/res/layout/activity_otp.xml
+++ b/app/src/main/res/layout/activity_otp.xml
@@ -7,26 +7,26 @@
     android:gravity="center"
     android:background="#7FD34C"
     android:orientation="vertical"
-    tools:context=".screens.ForgetPasswordActivity">
+    tools:context=".screens.OTPActivity">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Forget Password ?"
+        android:text="OPT Verification করুন "
         android:textColor="#FFF"
         android:textSize="20sp"
         android:textStyle="bold"/>
 
     <EditText
-        android:id="@+id/emailET"
+        android:id="@+id/otpET"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="30dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="10dp"
-        android:hint="Enter your Email"
-        android:inputType="textEmailAddress"
+        android:hint="এইখানে OTP কোড লিখুন"
+        android:inputType="number"
         android:minHeight="48dp" />
 
     <RelativeLayout
@@ -34,25 +34,25 @@
         android:layout_height="wrap_content">
 
         <Button
-            android:id="@+id/forgetBTN"
+            android:id="@+id/loginBTN"
             android:layout_marginTop="20dp"
             android:layout_marginEnd="40dp"
             android:layout_marginStart="40dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Send OTP"
+            android:text="লগইন করুন"
             android:textSize="20sp"
             android:backgroundTint="#FFF"
             android:textColor="#000"/>
 
         <ProgressBar
             android:id="@+id/loadingBar"
-            android:visibility="invisible"
-            android:layout_marginTop="20dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="20dp"
+            android:visibility="invisible" />
     </RelativeLayout>
 
 
@@ -63,7 +63,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:layout_marginTop="20dp"
-        android:text="Enter valid gmail and click send OTP for create new password"
+        android:text="OTP এর জন্য অপেক্ষা করুন ।"
         android:textAlignment="center"
         android:textColor="#004D40" />
 
