--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -18,7 +18,7 @@
         android:textStyle="bold"/>
 
     <EditText
-        android:id="@+id/emailET"
+        android:id="@+id/phoneET"
         android:layout_marginTop="30dp"
         android:layout_marginEnd="20dp"
         android:layout_marginStart="20dp"
