Login Toast Update & Register UI update

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -38,7 +38,7 @@
         android:inputType="phone"
         android:minHeight="48dp" />
 
-    <EditText
+    <Spinner
         android:id="@+id/cityET"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
