--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -17,6 +17,7 @@
         app:cardCornerRadius="2dp">
 
         <LinearLayout
+            android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal">
@@ -24,15 +25,18 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:gravity="center"
                 android:layout_weight="1">
 
                 <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:text="Weather update..."
+                    android:id="@+id/tempTV"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="আজকের তাপমাত্রাঃ"
                     android:textAlignment="center"
                     android:textColor="#000000"
-                    android:textSize="20sp"></TextView>
+                    android:textSize="20sp"/>
 
 
             </LinearLayout>
