--- a/app/src/main/res/layout/activity_chasabad_poddoti.xml
+++ b/app/src/main/res/layout/activity_chasabad_poddoti.xml
@@ -40,6 +40,8 @@
 
     </androidx.cardview.widget.CardView>
 
+
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -78,7 +80,7 @@
                         <de.hdodenhof.circleimageview.CircleImageView
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:src="@mipmap/ic_launcher"
+                            android:src="@drawable/icon_rice"
                             app:civ_border_width="2dp"
                             app:civ_border_color="#49C527"
                             android:layout_weight=".25"/>
@@ -89,7 +91,7 @@
                             android:layout_height="match_parent"
                             android:layout_weight=".75"
                             android:gravity="center"
-                            android:text="ধান চাষ পদ্বতি"
+                            android:text="ধান চাষ"
                             android:textStyle="bold"
                             android:textSize="20sp"
                             android:textColor="@color/black"/>
@@ -118,7 +120,7 @@
                             xmlns:app="http://schemas.android.com/apk/res-auto"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:src="@mipmap/fish"
+                            android:src="@drawable/icon_wheat"
                             app:civ_border_width="2dp"
                             app:civ_border_color="#49C527"
                             android:layout_weight=".25"/>
@@ -167,7 +169,7 @@
                             xmlns:app="http://schemas.android.com/apk/res-auto"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:src="@mipmap/ic_launcher"
+                            android:src="@drawable/icon_potato"
                             app:civ_border_width="2dp"
                             app:civ_border_color="#49C527"
                             android:layout_weight=".25"/>
@@ -178,7 +180,7 @@
                             android:layout_height="match_parent"
                             android:layout_weight=".75"
                             android:gravity="center"
-                            android:text="আলু চাষ পদ্বতি"
+                            android:text="আলু চাষ"
                             android:textStyle="bold"
                             android:textSize="20sp"
                             android:textColor="@color/black"></TextView>
@@ -207,7 +209,7 @@
                             xmlns:app="http://schemas.android.com/apk/res-auto"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:src="@mipmap/fish"
+                            android:src="@drawable/icon_eggplant"
                             app:civ_border_width="2dp"
                             app:civ_border_color="#49C527"
                             android:layout_weight=".25"/>
@@ -218,7 +220,7 @@
                             android:layout_height="match_parent"
                             android:layout_weight=".75"
                             android:gravity="center"
-                            android:text="বেগুন চাষ পদ্বতি"
+                            android:text="বেগুন চাষ"
                             android:textStyle="bold"
                             android:textSize="20sp"
                             android:textColor="@color/black"></TextView>
@@ -256,7 +258,7 @@
                             xmlns:app="http://schemas.android.com/apk/res-auto"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:src="@mipmap/ic_launcher"
+                            android:src="@drawable/icon_juta"
                             app:civ_border_width="2dp"
                             app:civ_border_color="#49C527"
                             android:layout_weight=".25"/>
@@ -297,7 +299,7 @@
                             xmlns:app="http://schemas.android.com/apk/res-auto"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:src="@mipmap/fish"
+                            android:src="@drawable/icon_corn"
                             app:civ_border_width="2dp"
                             app:civ_border_color="#49C527"
                             android:layout_weight=".25"/>
@@ -345,7 +347,7 @@
                         <de.hdodenhof.circleimageview.CircleImageView
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:src="@mipmap/ic_launcher"
+                            android:src="@drawable/icon_mustard"
                             app:civ_border_width="2dp"
                             app:civ_border_color="#49C527"
                             android:layout_weight=".25"/>
@@ -377,53 +379,6 @@
                     app:cardBackgroundColor="#DFFFFFFF"
                     app:cardCornerRadius="5dp">
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical">
-
-                        <de.hdodenhof.circleimageview.CircleImageView
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:src="@mipmap/fish"
-                            app:civ_border_width="2dp"
-                            app:civ_border_color="#49C527"
-                            android:layout_weight=".25"/>
-
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_weight=".75"
-                            android:gravity="center"
-                            android:text="আখ চাষ "
-                            android:textStyle="bold"
-                            android:textSize="20sp"
-                            android:textColor="@color/black"></TextView>
-
-                    </LinearLayout>
-                </androidx.cardview.widget.CardView>
-
-            </LinearLayout>
-
-            <!--               5th row -->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp">
-
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/C_SesameChash"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_margin="10dp"
-                    android:layout_weight="1"
-                    android:elevation="10dp"
-                    app:cardBackgroundColor="#FCFDFD"
-                    app:cardCornerRadius="5dp"
-                    >
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -433,47 +388,7 @@
                         <de.hdodenhof.circleimageview.CircleImageView
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:src="@mipmap/ic_launcher"
-                            app:civ_border_width="2dp"
-                            app:civ_border_color="#49C527"
-                            android:layout_weight=".25"/>
-
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_weight=".75"
-                            android:gravity="center"
-                            android:text="তিল চাষ
-"
-                            android:textStyle="bold"
-                            android:textSize="20sp"
-                            android:textColor="@color/black"></TextView>
-
-                    </LinearLayout>
-
-
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/C_SybeanChash"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_margin="10dp"
-                    android:layout_weight="1"
-                    android:elevation="10dp"
-                    app:cardBackgroundColor="#DFFFFFFF"
-                    app:cardCornerRadius="5dp">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical">
-
-                        <de.hdodenhof.circleimageview.CircleImageView
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:src="@mipmap/fish"
+                            android:src="@drawable/icon_soybean"
                             app:civ_border_width="2dp"
                             app:civ_border_color="#49C527"
                             android:layout_weight=".25"/>
@@ -490,9 +405,11 @@
                             android:textColor="@color/black"></TextView>
 
                     </LinearLayout>
+
                 </androidx.cardview.widget.CardView>
 
             </LinearLayout>
+
 
 
 
