--- a/app/src/main/res/layout/activity_weather.xml
+++ b/app/src/main/res/layout/activity_weather.xml
@@ -9,113 +9,127 @@
     android:background="@drawable/weather_bg"
     tools:context=".screens.WeatherActivity">
 
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="আজকের আবহাওয়া"
-        android:textColor="#FFFFFF"
-        android:textSize="25sp"
-        android:textStyle="bold"/>
-
-    <TextView
-        android:layout_margin="5dp"
-        android:id="@+id/cityTV"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="গাজীপুর"
-        android:textColor="#FFF"
-        android:drawableStart="@drawable/ic_baseline_location_on_24" />
-
-    <TextView
-        android:id="@+id/tempTV"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="5dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="তাপমাত্রাঃ "
-        android:textColor="#000000"
-        android:textSize="25sp"
-        android:textStyle="bold"/>
-
     <LinearLayout
-        android:layout_marginBottom="20dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        android:orientation="horizontal"
-        android:gravity="center"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:background="#6A5DDA5F"
+        >
+
 
         <TextView
-            android:layout_margin="10dp"
-            android:id="@+id/maxTempTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="সর্বোচ্চ তাপমাত্রাঃ "
+            android:text="আজকের আবহাওয়া"
+            android:textColor="#FFFFFF"
+            android:textSize="25sp"
+            android:textStyle="bold"/>
+
+        <TextView
+            android:layout_margin="5dp"
+            android:id="@+id/cityTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="গাজীপুর"
+            android:textColor="#FFF"
+            android:drawableStart="@drawable/ic_baseline_location_on_24" />
+
+        <TextView
+            android:id="@+id/tempTV"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="5dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="তাপমাত্রাঃ "
+            android:textColor="#000000"
+            android:textSize="25sp"
+            android:textStyle="bold"/>
+
+        <LinearLayout
+            android:layout_marginBottom="20dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_margin="10dp"
+                android:id="@+id/maxTempTV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="সর্বোচ্চ তাপমাত্রাঃ "
+                android:textStyle="bold"
+                android:textColor="#FFF"/>
+
+            <TextView
+                android:layout_margin="10dp"
+                android:id="@+id/minTempTV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="সর্বনিম্ন তাপমাত্রাঃ "
+                android:textStyle="bold"
+                android:textColor="#FFF"/>
+
+        </LinearLayout>
+
+        <TextView
+            android:layout_margin="5dp"
+            android:id="@+id/feelsTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="মনে হচ্ছেঃ "
+            android:textColor="#FFF"/>
+
+        <TextView
+            android:layout_margin="5dp"
+            android:id="@+id/humidityTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="আদ্রতাঃ "
             android:textStyle="bold"
             android:textColor="#FFF"/>
 
         <TextView
-            android:layout_margin="10dp"
-            android:id="@+id/minTempTV"
+            android:layout_margin="5dp"
+            android:id="@+id/airSpeedTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="সর্বনিম্ন তাপমাত্রাঃ "
+            android:text="বাতাসের গতিঃ "
+            android:textColor="#FFF"/>
+
+        <TextView
+            android:layout_margin="5dp"
+            android:id="@+id/cloudTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="মেঘের পরিমানঃ "
             android:textStyle="bold"
             android:textColor="#FFF"/>
+
+        <TextView
+            android:layout_margin="5dp"
+            android:id="@+id/pressureTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="প্রেসারঃ "
+            android:textColor="#FFF"/>
+
+        <TextView
+            android:layout_margin="5dp"
+            android:id="@+id/detailsTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="মন্তব্যঃ "
+            android:textStyle="bold"
+            android:textColor="#FFF"/>
+
 
     </LinearLayout>
 
-    <TextView
-        android:layout_margin="5dp"
-        android:id="@+id/feelsTV"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="মনে হচ্ছেঃ "
-        android:textColor="#FFF"/>
 
-    <TextView
-        android:layout_margin="5dp"
-        android:id="@+id/humidityTV"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="আদ্রতাঃ "
-        android:textStyle="bold"
-        android:textColor="#FFF"/>
 
-    <TextView
-        android:layout_margin="5dp"
-        android:id="@+id/airSpeedTV"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="বাতাসের গতিঃ "
-        android:textColor="#FFF"/>
-
-    <TextView
-        android:layout_margin="5dp"
-        android:id="@+id/cloudTV"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="মেঘের পরিমানঃ "
-        android:textStyle="bold"
-        android:textColor="#FFF"/>
-
-    <TextView
-        android:layout_margin="5dp"
-        android:id="@+id/pressureTV"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="প্রেসারঃ "
-        android:textColor="#FFF"/>
-
-    <TextView
-        android:layout_margin="5dp"
-        android:id="@+id/detailsTV"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="মন্তব্যঃ "
-        android:textStyle="bold"
-        android:textColor="#FFF"/>
 
 </LinearLayout>
