--- a/app/src/main/res/layout/activity_fish_cahsabad.xml
+++ b/app/src/main/res/layout/activity_fish_cahsabad.xml
@@ -9,16 +9,25 @@
 
     android:orientation="vertical"
     >
-
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:gravity="center"
         android:text="মৎস্য চাষ"
-        android:textColor="#000000"
+
         android:textSize="40sp"
         ></TextView>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="dsfjsda"
+        android:textColor="#000000"
+        />
+
+
+
+
 
 
 </LinearLayout>
