--- a/app/src/main/res/layout/activity_otp.xml
+++ b/app/src/main/res/layout/activity_otp.xml
@@ -1,70 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/loginbg"
     android:gravity="center"
-    android:background="#7FD34C"
     android:orientation="vertical"
     tools:context=".screens.OTPActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="OPT Verification করুন "
-        android:textColor="#FFF"
-        android:textSize="20sp"
-        android:textStyle="bold"/>
-
-    <EditText
-        android:id="@+id/otpET"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="10dp"
-        android:hint="এইখানে OTP কোড লিখুন"
-        android:inputType="number"
-        android:minHeight="48dp" />
+        android:layout_height="match_parent"
+        android:background="#667FD34C"
+        android:gravity="center"
+        android:orientation="vertical">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        <ImageView
+            android:layout_width="229dp"
+            android:layout_height="156dp"
+            android:src="@mipmap/logo"></ImageView>
 
-        <Button
-            android:id="@+id/loginBTN"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="40dp"
-            android:layout_marginStart="40dp"
-            android:layout_width="match_parent"
+        <TextView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="লগইন করুন"
+            android:layout_marginTop="20dp"
+            android:text="OPT Verification করুন "
+            android:textColor="#000000"
             android:textSize="20sp"
-            android:backgroundTint="#FFF"
-            android:textColor="#000"/>
+            android:textStyle="bold" />
 
-        <ProgressBar
-            android:id="@+id/loadingBar"
+        <EditText
+            android:id="@+id/otpET"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="30dp"
             android:layout_marginEnd="20dp"
-            android:visibility="invisible" />
-    </RelativeLayout>
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/round_bg"
+            android:hint="এইখানে OTP কোড লিখুন"
+            android:inputType="number"
+            android:minHeight="48dp" />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <Button
+                android:id="@+id/loginBTN"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="40dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="40dp"
+                android:backgroundTint="#FFF"
+                android:text="লগইন করুন"
+                android:textColor="#000"
+                android:textSize="20sp" />
+
+            <ProgressBar
+                android:id="@+id/loadingBar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="20dp"
+                android:visibility="invisible" />
+        </RelativeLayout>
 
 
+        <TextView
+            android:id="@+id/statusTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:layout_marginTop="20dp"
+            android:text="OTP এর জন্য ২ মিনিট অপেক্ষা করুন ।"
+            android:textAlignment="center"
+            android:textColor="#000000"
+            android:textSize="16sp" />
 
-    <TextView
-        android:id="@+id/statusTV"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:layout_marginTop="20dp"
-        android:text="OTP এর জন্য ২ মিনিট অপেক্ষা করুন ।"
-        android:textAlignment="center"
-        android:textColor="#004D40" />
+    </LinearLayout>
+
 
 </LinearLayout>
