--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -183,7 +183,7 @@
                         android:layout_margin="10dp"
                         android:layout_weight="1"
                         android:elevation="10dp"
-                        app:cardBackgroundColor="#DF8AD114"
+                        app:cardBackgroundColor="#FCFDFD"
                         app:cardCornerRadius="5dp">
                        >
 
@@ -196,7 +196,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:layout_weight=".20"
-                                android:src="@drawable/ic_launcher_background"
+                                android:src="@drawable/img_buy_sell"
 
                                 ></ImageView>
 
@@ -205,8 +205,9 @@
                                 android:layout_height="match_parent"
                                 android:layout_weight=".80"
                                 android:gravity="center"
-                                android:text="This is Title"
-                                android:textStyle="bold"></TextView>
+                                android:text="ক্রয়  বিক্রয়"
+                                android:textStyle="bold"
+                                android:textColor="@color/black"></TextView>
 
                         </LinearLayout>
 
@@ -219,7 +220,7 @@
                         android:layout_margin="10dp"
                         android:layout_weight="1"
                         android:elevation="10dp"
-                        app:cardBackgroundColor="#DF8AD114"
+                        app:cardBackgroundColor="#FCFDFD"
                         app:cardCornerRadius="5dp">
 
                         <LinearLayout
@@ -263,7 +264,7 @@
                         android:layout_margin="10dp"
                         android:layout_weight="1"
                         android:elevation="10dp"
-                        app:cardBackgroundColor="#DF8AD114"
+                        app:cardBackgroundColor="#FCFDFD"
                         app:cardCornerRadius="5dp">
                        >
 
@@ -286,7 +287,8 @@
                                 android:layout_weight=".80"
                                 android:gravity="center"
                                 android:text="This is Title"
-                                android:textStyle="bold"></TextView>
+                                android:textStyle="bold"
+                                android:textColor="@color/black"></TextView>
 
                         </LinearLayout>
 
@@ -330,85 +332,7 @@
 
 
                 </LinearLayout>
-<!--                2nd row -->
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1">
 
-                    <androidx.cardview.widget.CardView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_margin="10dp"
-                        android:layout_weight="1"
-                        android:elevation="10dp"
-                        app:cardBackgroundColor="#DF8AD114"
-                        app:cardCornerRadius="5dp">
-                       >
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:orientation="vertical">
-
-                            <ImageView
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:layout_weight=".20"
-                                android:src="@drawable/ic_launcher_background"
-
-                                ></ImageView>
-
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:layout_weight=".80"
-                                android:gravity="center"
-                                android:text="This is Title"
-                                android:textStyle="bold"></TextView>
-
-                        </LinearLayout>
-
-
-                    </androidx.cardview.widget.CardView>
-
-                    <androidx.cardview.widget.CardView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_margin="10dp"
-                        android:layout_weight="1"
-                        android:elevation="10dp"
-                        app:cardBackgroundColor="#DF8AD114"
-                        app:cardCornerRadius="5dp">
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:orientation="vertical">
-
-                            <ImageView
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:layout_weight=".20"
-                                android:src="@drawable/ic_launcher_background"
-
-                                ></ImageView>
-
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:layout_weight=".80"
-                                android:gravity="center"
-                                android:text="This is Title"
-                                android:textStyle="bold"></TextView>
-
-                        </LinearLayout>
-
-
-                    </androidx.cardview.widget.CardView>
-
-
-                </LinearLayout>
 
 
 
