কেনা বেচার পণ্য যুক্ত করা আর পণ্য দেখা Add করা হয়েছে সাথে লগইন Option চেঞ্জ করে দেয়া হয়েছে ।

--- a/app/src/main/res/layout/activity_otp.xml
+++ b/app/src/main/res/layout/activity_otp.xml
@@ -39,6 +39,9 @@
             android:layout_marginBottom="10dp"
             android:background="@drawable/round_bg"
             android:hint="এইখানে OTP কোড লিখুন"
+            android:padding="15dp"
+            android:textColorHint="#9F9B9B"
+            android:textColor="#000"
             android:inputType="number"
             android:minHeight="48dp" />
 
