--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
-android:background="@drawable/loginbg"
+    android:background="@drawable/loginbg"
     tools:context=".screens.LoginActivity">
 
 
@@ -27,29 +27,31 @@ android:background="@drawable/loginbg"
             android:id="@+id/phoneET"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="5dp"
+            android:padding="15dp"
             android:layout_marginStart="20dp"
             android:layout_marginTop="30dp"
             android:layout_marginEnd="20dp"
             android:layout_marginBottom="10dp"
             android:background="@drawable/round_bg"
             android:hint="আপনার ফোন নম্বর"
-            android:inputType="phone"
-            android:textColor="@color/black" />
+            android:textColor="#000"
+            android:textColorHint="#9F9B9B"
+            android:inputType="phone" />
 
         <EditText
             android:id="@+id/passwordET"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="5dp"
+            android:padding="15dp"
             android:layout_marginStart="20dp"
             android:layout_marginTop="30dp"
             android:layout_marginEnd="20dp"
             android:layout_marginBottom="10dp"
             android:background="@drawable/round_bg"
             android:hint="Password"
-            android:inputType="textPassword"
-            android:textColor="@color/black" />
+            android:textColor="#000"
+            android:textColorHint="#9F9B9B"
+            android:inputType="textPassword" />
 
         <TextView
             android:layout_width="wrap_content"
