--- a/app/src/main/res/layout/fragment_bazar_jat_koron.xml
+++ b/app/src/main/res/layout/fragment_bazar_jat_koron.xml
@@ -1,31 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:weightSum="3"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:gravity="center"
-    android:background="#B13737"
-    android:padding="5dp"
+    android:padding="10dp"
+    android:background="#F3EFEF"
     android:orientation="vertical"
-    tools:context=".BazarJatKoron"
-    >
+    tools:context=".BazarJatKoron">
 
-
-    <LinearLayout
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recylerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent" />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="this is "
-            />
-    </LinearLayout>
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/addProductFBTN"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
+        android:backgroundTint="#000000"
+        android:contentDescription="@string/add_product"
+        android:src="@drawable/ic_baseline_add_24"
+        app:fabSize="auto" />
 
-
-
-
-
-
-</FrameLayout>
+</RelativeLayout>
